// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MeasureInformation component should render the component with a blank measure name 1`] = `
<div
  class="MeasureInformation___StyledDiv-sc-1pua5bc-2 IOWWo"
  data-testid="measure-name-edit"
>
  <div
    class="MeasureInformation__DisplayDiv-sc-1pua5bc-0 goZaEd"
  >
    <span
      class="MeasureInformation___StyledSpan2-sc-1pua5bc-5 jXgrNU"
    >
      Measure Name:
    </span>
    <div
      data-testid="outer-area"
    >
      <div
        data-testid="inline-editor"
      >
        <span
          class="InlineEdit__ClickableSpan-sc-infirb-0"
          data-testid="inline-view-span"
        >
          <svg
            aria-hidden="true"
            class="InlineEdit___StyledPencilIcon-sc-infirb-2 gvkVkb"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="MeasureInformation___StyledDiv3-sc-1pua5bc-6 ieyezC"
    data-testid="cql-library-name-display"
  >
    <span
      class="MeasureInformation___StyledSpan3-sc-1pua5bc-7 byhJob"
    >
      Measure CQL Library Name:
    </span>
    <span
      class="MeasureInformation__DisplaySpan-sc-1pua5bc-1 eEmctf"
    >
      NA
    </span>
  </div>
</div>
`;

exports[`MeasureInformation component should render the component with measure's name populated 1`] = `
<div
  class="MeasureInformation___StyledDiv-sc-1pua5bc-2 IOWWo"
  data-testid="measure-name-edit"
>
  <div
    class="MeasureInformation__DisplayDiv-sc-1pua5bc-0 goZaEd"
  >
    <span
      class="MeasureInformation___StyledSpan2-sc-1pua5bc-5 jXgrNU"
    >
      Measure Name:
    </span>
    <div
      data-testid="outer-area"
    >
      <div
        data-testid="inline-editor"
      >
        <span
          class="InlineEdit__ClickableSpan-sc-infirb-0"
          data-testid="inline-view-span"
        >
          the measure for testing
          <svg
            aria-hidden="true"
            class="InlineEdit___StyledPencilIcon-sc-infirb-2 gvkVkb"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="MeasureInformation___StyledDiv3-sc-1pua5bc-6 ieyezC"
    data-testid="cql-library-name-display"
  >
    <span
      class="MeasureInformation___StyledSpan3-sc-1pua5bc-7 byhJob"
    >
      Measure CQL Library Name:
    </span>
    <span
      class="MeasureInformation__DisplaySpan-sc-1pua5bc-1 eEmctf"
    >
      NA
    </span>
  </div>
</div>
`;
